# Sponza

./: .gitignore  Cargo.toml  README.md
assets/sponza/: fix_material_alphas_zero.py
src/: main.rs
